{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 71,
  "lineage": "795a9385-c844-6a71-969e-ccdeff4a3b03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09eb75deefca541a8",
            "association_id": "eipassoc-0453a6624e0505f2e",
            "domain": "vpc",
            "id": "eipalloc-09eb75deefca541a8",
            "instance": "i-0e408a3d800e46726",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f22dc0d50cba3eed",
            "private_dns": "ip-10-0-101-44.ec2.internal",
            "private_ip": "10.0.101.44",
            "public_dns": "ec2-34-225-53-22.compute-1.amazonaws.com",
            "public_ip": "34.225.53.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_public.aws_instance.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:025533476292:instance/i-0fd9a41c3ff876f9e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd9a41c3ff876f9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4f46333e44d9830",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_ip": "10.0.1.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b3ef373358c30cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a79893088b17948f",
            "tags": {
              "Name": "stag-vm-1",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "stag-vm-1",
              "environment": "stag",
              "owners": "HR"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "stag-vm-1"
            },
            "vpc_security_group_ids": [
              "sg-0afedf0a93bf301f7"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:025533476292:instance/i-0fdc18fee468392eb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdc18fee468392eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da4f92c51f72b1eb",
            "private_dns": "ip-10-0-2-168.ec2.internal",
            "private_ip": "10.0.2.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e3b5d793aef2a48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef65a233bf958f1d",
            "tags": {
              "Name": "stag-vm-2",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "stag-vm-2",
              "environment": "stag",
              "owners": "HR"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "stag-vm-2"
            },
            "vpc_security_group_ids": [
              "sg-0afedf0a93bf301f7"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:025533476292:instance/i-0e408a3d800e46726",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e408a3d800e46726",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f22dc0d50cba3eed",
            "private_dns": "ip-10-0-101-44.ec2.internal",
            "private_ip": "10.0.101.44",
            "public_dns": "ec2-34-225-53-22.compute-1.amazonaws.com",
            "public_ip": "34.225.53.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092ebc8b20e7e42a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037e3b87be9714171",
            "tags": {
              "Name": "stag-BastionHost",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "stag-BastionHost",
              "environment": "stag",
              "owners": "HR"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "stag-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-01dafcfec6b69c8a2"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:security-group/sg-0afedf0a93bf301f7",
            "description": "Security Group with HTTP \u0026 SSH port open for entire VPC Block (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afedf0a93bf301f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg-20221202193317699400000001",
            "name_prefix": "private-sg-",
            "owner_id": "025533476292",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2076696673",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0afedf0a93bf301f7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-380405229",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0afedf0a93bf301f7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2596553939",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0afedf0a93bf301f7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:security-group/sg-01dafcfec6b69c8a2",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dafcfec6b69c8a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-bastion-sg-20221202193317699500000002",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "025533476292",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1917693238",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01dafcfec6b69c8a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4187337731",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01dafcfec6b69c8a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a54fc44de0aa1f00",
            "association_id": "eipassoc-008c4bf2f70ad8b1b",
            "domain": "vpc",
            "id": "eipalloc-0a54fc44de0aa1f00",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc3a1f19a8e27ae5",
            "private_dns": "ip-10-0-101-28.ec2.internal",
            "private_ip": "10.0.101.28",
            "public_dns": "ec2-54-198-249-125.compute-1.amazonaws.com",
            "public_ip": "54.198.249.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:internet-gateway/igw-01d410f5bbfa8e888",
            "id": "igw-01d410f5bbfa8e888",
            "owner_id": "025533476292",
            "tags": {
              "Name": "HR-stag-myvpc",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a54fc44de0aa1f00",
            "connectivity_type": "public",
            "id": "nat-04d07d05378cd4e5d",
            "network_interface_id": "eni-0bc3a1f19a8e27ae5",
            "private_ip": "10.0.101.28",
            "public_ip": "54.198.249.125",
            "subnet_id": "subnet-037e3b87be9714171",
            "tags": {
              "Name": "HR-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02480694f6e63417a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04d07d05378cd4e5d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02480694f6e63417a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d410f5bbfa8e888",
            "id": "r-rtb-08279eebc6994c3b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08279eebc6994c3b5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:route-table/rtb-0555f9eed9d1e8586",
            "id": "rtb-0555f9eed9d1e8586",
            "owner_id": "025533476292",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-myvpc-db",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-db",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:route-table/rtb-02480694f6e63417a",
            "id": "rtb-02480694f6e63417a",
            "owner_id": "025533476292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d07d05378cd4e5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HR-stag-myvpc-private",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-private",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:route-table/rtb-08279eebc6994c3b5",
            "id": "rtb-08279eebc6994c3b5",
            "owner_id": "025533476292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d410f5bbfa8e888",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HR-stag-myvpc-public",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-public",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aaa007c0d7e8c2a",
            "route_table_id": "rtb-0555f9eed9d1e8586",
            "subnet_id": "subnet-0985b9772622b369b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0717ccbd5f2dc05be",
            "route_table_id": "rtb-0555f9eed9d1e8586",
            "subnet_id": "subnet-034ed927b2412f24b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0730fc2654a82a8f5",
            "route_table_id": "rtb-02480694f6e63417a",
            "subnet_id": "subnet-0a79893088b17948f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9c921468cce4b3c",
            "route_table_id": "rtb-02480694f6e63417a",
            "subnet_id": "subnet-0ef65a233bf958f1d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f47035fd69076e4",
            "route_table_id": "rtb-08279eebc6994c3b5",
            "subnet_id": "subnet-037e3b87be9714171"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a2c2d72555cdf67",
            "route_table_id": "rtb-08279eebc6994c3b5",
            "subnet_id": "subnet-0b2107a7f77e2c4ba"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:subnet/subnet-0985b9772622b369b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0985b9772622b369b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025533476292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:subnet/subnet-034ed927b2412f24b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034ed927b2412f24b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025533476292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:subnet/subnet-0a79893088b17948f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a79893088b17948f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025533476292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:subnet/subnet-0ef65a233bf958f1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef65a233bf958f1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025533476292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:subnet/subnet-037e3b87be9714171",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037e3b87be9714171",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025533476292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:subnet/subnet-0b2107a7f77e2c4ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2107a7f77e2c4ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025533476292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fdd5bffb0cb2ab59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025533476292:vpc/vpc-0fdd5bffb0cb2ab59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc0c31eb001d6935",
            "default_route_table_id": "rtb-05e536f6c59f2bb4e",
            "default_security_group_id": "sg-0f8a5b378217e3ff8",
            "dhcp_options_id": "dopt-06ec31c718f87054c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fdd5bffb0cb2ab59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e536f6c59f2bb4e",
            "owner_id": "025533476292",
            "tags": {
              "Name": "HR-stag-myvpc",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-myvpc",
              "environment": "stag",
              "owners": "HR"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}